# realworld-starter-kit

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml  temp_mm.json
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: api-tests.yml
alembic/: env.py
alembic/versions/: c098cd87dfb8_initial_schema.py
backend/: __init__.py  main.py
backend/api/: __init__.py  health.py
backend/core/: __init__.py  config.py  db.py  deps.py  errors.py  security.py
backend/models/: __init__.py  article.py  comment.py  mixins.py  user.py
backend/schemas/: __init__.py  article.py  base.py  comment.py  tag.py  user.py
backend/services/: __init__.py
backend/tests/: test_auth.py  test_cors.py  test_db.py  test_errors.py  test_health.py  test_models.py  test_schemas.py
docs/adr/: 0001-htmx-jwt-localstorage-rendering-strategy.md  README.md
docs/backend/: cors.md
frontend/: __init__.py  avatars.py  package.json  templates_env.py
frontend/routes/: __init__.py  pages.py
frontend/static/css/: styles.css
frontend/static/js/: apiclient.js  apiclient.test.js  auth.js  auth.test.js  navbar.js
frontend/templates/: base.html  index.html  page.html
frontend/templates/macros/: avatars.html
frontend/templates/partials/: footer.html  navbar.html
frontend/tests/: test_avatars.py  test_layout.py  test_routes.py
scripts/: dev.sh
specs/api/: README.md  run-api-tests-hurl.sh
specs/api/hurl/: 00-health.hurl  01-auth.hurl  02-profiles.hurl  03-articles.hurl  04-comments.hurl  05-favorites.hurl  06-tags.hurl
