[project]
name = "conduit"
version = "0.1.0"
description = "RealWorld Conduit — a single FastAPI service serving the JSON API and a Jinja2+HTMX UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pyjwt>=2.9",
    "passlib[bcrypt]>=1.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# One FastAPI service, two source trees. Ship both as installable packages so
# `import backend` / `import frontend` work everywhere (tests, uvicorn, alembic).
[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.uv]
# Keep the dev toolchain in the default sync so `uv sync` gives a ready-to-lint
# environment without extra incantations.
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py311"
# Mirror the repo rule: keep files lean. Ruff won't enforce 600 lines, but the
# excludes keep generated/vendored noise out of lint runs.
extend-exclude = ["frontend/static/js", ".beads"]

[tool.ruff.lint]
# A pragmatic, opinionated set: pyflakes + pycodestyle + isort + bugbear +
# comprehensions + pyupgrade. Enough to keep things tidy without bikeshedding.
select = ["E", "F", "I", "B", "C4", "UP", "W"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "frontend/tests"]
addopts = "-q"
